test/sprtn/errors/undefined.sprtn
a
(define (f a b) (* a b c))
(f d)
(e f)
(if (g h)
    j
    k)
'l
`m
`,n
`(o p ,@q r)
(let ((s t)
      (t u))
  (* s t u))
(letrec ((u v)
         (v w))
  (* u v w))
(letrec ((v (cons 23 u))
         (u (cons 5 (lambda () v))))
  (* u v))
(letrec ((u (cons 5 (lambda () v)))
         (v (cons 23 u)))
  (* u v))
(let ((typo23 23)
      (typo5 5)
      (typo-dash 0))
  (* typo 23 typo5)
  (* typo23 typo 5)
  (* typo23 opyt5)
  (* typo23typo5)
  (* typo23typo23)
  (* typo6 typo24)
  (* typo-dash type-dash typo_dash))